reworked dzen bar

--- a/xmonad/i3status.conf
+++ b/xmonad/i3status.conf
@@ -12,12 +12,12 @@ general {
         interval = 5
 }
 
-order += "disk /"
+#order += "disk /"
 #order += "disk /home"
 order += "wireless wlan0"
 order += "ethernet eth0"
 order += "battery 0"
-order += "load"
+#order += "load"
 
 wireless wlan0 {
         format_up = "W: (%quality at %essid) %ip"
