--- a/xmonad/i3status.conf
+++ b/xmonad/i3status.conf
@@ -16,7 +16,7 @@ general {
 #order += "disk /home"
 order += "wireless wlan0"
 order += "ethernet eth0"
-order += "battery 0"
+#order += "battery 0"
 #order += "load"
 
 wireless wlan0 {
