Moved from i3status to conky

--- a/xmonad/confs/conkyStats.conf
+++ b/xmonad/confs/conkyStats.conf
@@ -89,8 +89,8 @@ $color$stippled_hr
 ${color lightgrey}File systems:
  / $color${fs_used /}/${fs_size /} ${fs_bar /}
  /home $color${fs_used /home}/${fs_size /home} ${fs_bar /home}
- C:// $color${fs_used /mnt/WinC}/${fs_size /mnt/WinC} ${fs_bar /mnt/WinC}
- D:// $color${fs_used /mnt/WinD}/${fs_size /mnt/WinD} ${fs_bar /mnt/WinD}
+ C:// $color${fs_used /mnt/C}/${fs_size /mnt/C} ${fs_bar /mnt/C}
+ E:// $color${fs_used /mnt/E}/${fs_size /mnt/E} ${fs_bar /mnt/E}
 ${color lightgrey}Temperatures:
  CPU:$color ${acpitemp}C${color grey}
 ${color}Name              PID     CPU%   MEM%
