Net status for varying interface names working

--- a/xmonad/confs/conkyDzen.conf
+++ b/xmonad/confs/conkyDzen.conf
@@ -12,6 +12,6 @@ use_spacer none
  
 TEXT
 ^fg(\#999999)${hwmon temp 1}°^fg()  \
-^fg(\#91b8ff)${if_existing /sys/class/power_supply/BAT1/present}${battery_short BAT1} (${battery_time BAT1})${else}AC${endif}^fg()   \
-^ca(1,wicd-client -n)${if_empty ${exec ip addr show wlp3s0 | grep 'inet'}}^fg(\#bbbbbb)enp2s0^fg()  ^fg(\#d94c3d)${upspeedf enp2s0}k^fg()  ^fg(\#a4bc51)${downspeedf enp2s0}k^fg()${else}\
-^fg(\#bbbbbb)${wireless_link_qual_perc wlp3s0}%  ${wireless_essid wlp3s0}^fg()  ^fg(\#d94c3d)${upspeedf wlp3s0}k^fg()  ^fg(\#a4bc51)${downspeedf wlp3s0}k^fg()${endif}^ca()   \
+^fg(\#91b8ff)${if_existing /sys/class/power_supply/BAT0/present}${battery_short BAT0} (${battery_time BAT0})${else}AC${endif}^fg()   \
+^ca(1,wicd-client -n)${if_empty ${exec $HOME/config/scripts/checkIfs.sh}}^fg(\#d94c3d)NET DOWN^fg() ${else}\
+^fg(\#a4bc51)NET UP: ^fg()^fg(\#bbbbbb)${exec $HOME/config/scripts/ifState.sh} ${endif}^fg()^ca()   \
