--- a/xmonad/confs/conkyDzen.conf
+++ b/xmonad/confs/conkyDzen.conf
@@ -12,6 +12,6 @@ use_spacer none
  
 TEXT
 ^fg(\#999999)${hwmon temp 1}°^fg()  \
-^fg(\#91b8ff)${if_existing /sys/class/power_supply/BAT0/present}${battery_short BAT0} (${battery_time BAT0})${else}AC${endif}^fg()   \
+^fg(\#91b8ff)${if_existing /sys/class/power_supply/AC0/online 0}${battery_short BAT0} (${battery_time BAT0})${else}AC${battery_short BAT0}${endif}^fg()   \
 ^ca(1,wicd-client -n)${if_empty ${exec $HOME/config/scripts/checkIfs.sh}}^fg(\#d94c3d)NET DOWN^fg() ${else}\
 ^fg(\#a4bc51)NET UP: ^fg()^fg(\#bbbbbb)${exec $HOME/config/scripts/ifState.sh} ${endif}^fg()^ca()   \
