--- a/xmonad/confs/conkyDzen.conf
+++ b/xmonad/confs/conkyDzen.conf
@@ -7,11 +7,10 @@ out_to_console yes
 update_interval 3
 total_run_times 0
 use_spacer none
- 
 # temp, loadavg, cpu usage, cpu freq, battery, network (click launches wicd), date
  
 TEXT
 ^fg(\#999999)${hwmon temp 1}°^fg()  \
-^fg(\#91b8ff)${if_existing /sys/class/power_supply/AC0/online 0}${battery_short BAT0} (${battery_time BAT0})${else}AC${battery_short BAT0}${endif}^fg()   \
-^ca(1,wicd-client -n)${if_empty ${exec $HOME/config/scripts/checkIfs.sh}}^fg(\#d94c3d)NET DOWN^fg() ${else}\
-^fg(\#a4bc51)NET UP: ^fg()^fg(\#bbbbbb)${exec $HOME/config/scripts/ifState.sh} ${endif}^fg()^ca()   \
+^fg(\#91b8ff)${if_existing /sys/class/power_supply/ACAD/online 0}${battery_short BAT1} (${battery_time BAT1})${else}AC${battery_short BAT1}${endif}^fg()   \
+${if_empty ${exec $HOME/config/scripts/checkIfs.sh}}^fg(\#d94c3d)NET DOWN^fg() ${else}\
+^fg(\#a4bc51)NET UP: ^fg()^fg(\#bbbbbb)${exec $HOME/config/scripts/ifState.sh} ${endif}^fg()   \
