increased update interval on conky scripts

--- a/xmonad/confs/conkyStats.conf
+++ b/xmonad/confs/conkyStats.conf
@@ -1,3 +1,4 @@
+# vim:nu:ai:si:et:ts=4:sw=4:ft=conkyrc:
 own_window yes
 own_window_type normal
 own_window_transparent yes
@@ -24,7 +25,7 @@ on_bottom yes
 mail_spool $MAIL
 
 # Update interval in seconds
-update_interval 5
+update_interval 10
 
 # Use double buffering (reduces flicker, may not work for everyone)
 double_buffer yes
