Improved .gitignore + changed shortcut for ctrlp in vim Added new directory: xmonad/confs/custom -- additional configs which are not to be synced should be stored there.

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@ xmonad-*
 history
 # Files i'm working on
 *.swp
+# and hidden
+.*
 # Ignore backups of files before installation
 *.bp
 # Config for custom resolutions
-*/xmonad.conf
-*/conkyStats.conf
+xmonad/confs/custom/*
