--- a/xmonad/confs/betterConkyStatus.conf
+++ b/xmonad/confs/betterConkyStatus.conf
@@ -1,44 +1,40 @@
 # vim:nu:ai:si:et:ts=4:sw=4:ft=conkyrc:
-own_window yes
-own_window_type normal
-own_window_transparent yes
-own_window_hints undecorated,below,sticky,skip_taskbar,skip_pager
-background yes 
-double_buffer yes
-
 total_run_times 0
-
-cpu_avg_samples 2
-
 out_to_console no
 
-use_xft yes
-
-# Xft font when Xft is enabled
-xftfont Bitstream Vera Sans Mono:size=8
-
-xftalpha 0.8
-
-# Update interval in seconds
+background yes 
 update_interval 2
 
-# Use double buffering (reduces flicker, may not work for everyone)
+cpu_avg_samples 2
+net_avg_samples 2
+temperature_unit celsius
+
+
+
+
+
 double_buffer yes
 
-# Minimum size of text area
-#minimum_size 280 5
-#maximum_width 150
+gap_x 25
+gap_y 25
 minimum_size 820
 maximum_width 820
+own_window yes
+own_window_type override
+own_window_transparent yes
+own_window_hints undecorate,below,sticky,skip_taskbar,skip_pager
 
-# Draw shades?
 draw_shades no
-
-# Draw outlines?
 draw_outline no
-
-# Draw borders around text
 draw_borders no
+draw_graph_borders no
+
+override_utf8_locale yes
+use_xft yes
+xftfont Bitstream Vera Sans Mono:size=8
+xftalpha 0.8
+
+
 
 # Stippled borders?
 stippled_borders 10
@@ -54,8 +50,6 @@ default_outline_color white
 # Text alignment, other possible values are commented
 #alignment top_left
 #minimum_size 10 10
-gap_x 25
-gap_y 25
 #alignment top_right
 alignment top_left
 #alignment bottom_right
