changed log d to systemd-journald

--- a/xmonad/confs/betterConkyStatus.conf
+++ b/xmonad/confs/betterConkyStatus.conf
@@ -20,7 +20,7 @@ gap_y 25
 minimum_size 820
 maximum_width 820
 own_window yes
-own_window_type override
+own_window_type normal
 own_window_transparent yes
 own_window_hints undecorate,below,sticky,skip_taskbar,skip_pager
 
@@ -51,7 +51,7 @@ default_outline_color white
 #alignment top_left
 #minimum_size 10 10
 #alignment top_right
-alignment top_left
+alignment top_middle
 #alignment bottom_right
 
 # Gap between borders of screen and text
@@ -75,7 +75,7 @@ TEXT
 $nodename - $sysname $kernel on $machine
 ${color lightgrey}Uptime:$color $uptime ${color lightgrey}- Load:$color $loadavg
 ${color lightgrey}CPU Usage:${color #5000a0} ${cpu}% ${goto 120}${cpubar 8,250}
-${color black}${cpugraph 8,200 000000 5000a0}
+${color black}${cpugraph 8,365 000000 5000a0}
 ${color lightgrey}RAM Usage:$color $mem/$memmax - $memperc% ${goto 240}${membar 8,130}
 ${color lightgrey}Swap Usage:$color $swap/$swapmax - $swapperc% ${goto 280}${swapbar 8,90}
 ${color lightgrey}Processes:$color $processes  ${color grey}Running:$color $running_processes
@@ -84,9 +84,9 @@ ${color lightgrey}File systems:
  /home $color${fs_used /home}/${fs_size /home} ${goto 170}${fs_bar 8,200 /home}
 ${color lightgrey}Temperatures:
  CPU:$color ${acpitemp}C${color grey}
-${voffset -100}
+${voffset -80}
 ${goto 474}${time %T}
-${voffset -70}
+${voffset -90}
 ${goto 600}${color}Name              PID     CPU%   MEM%
 ${goto 600}${color #ddaa00} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
 ${goto 600}${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
@@ -97,4 +97,4 @@ ${goto 600}${color lightgrey} ${top_mem name 2} ${top_mem pid 2} ${top_mem cpu 2
 ${goto 600}${color lightgrey} ${top_mem name 3} ${top_mem pid 3} ${top_mem cpu 3} ${top_mem mem 3}
 ${voffset 20}
 ${color lightgrey}${stippled_hr 1}
-${tail /var/log/messages 15 4}
+${execi 5 journalctl -n15}
