doodling with conky stats

--- a/xmonad/confs/betterConkyStatus.conf
+++ b/xmonad/confs/betterConkyStatus.conf
@@ -2,27 +2,25 @@
 total_run_times 0
 out_to_console no
 
-background yes 
-update_interval 2
+background yes
+update_interval 1
 
 cpu_avg_samples 2
 net_avg_samples 2
 temperature_unit celsius
 
-
-
-
-
 double_buffer yes
 
 gap_x 25
-gap_y 25
-minimum_size 820
-maximum_width 820
+gap_y 65
+#minimum_size 1640
+maximum_width 1640
 own_window yes
 own_window_type normal
-own_window_transparent yes
-own_window_hints undecorate,below,sticky,skip_taskbar,skip_pager
+own_window_transparent no
+own_window_argb_visual yes
+own_window_argb_value 0
+own_window_hints below,sticky,skip_taskbar,skip_pager,undecorate
 
 draw_shades no
 draw_outline no
@@ -33,8 +31,6 @@ override_utf8_locale yes
 use_xft yes
 xftfont Bitstream Vera Sans Mono:size=8
 xftalpha 0.8
-
-
 
 # Stippled borders?
 stippled_borders 10
@@ -65,7 +61,7 @@ no_buffers yes
 # set to yes if you want all text to be in uppercase
 uppercase no
 
-max_text_width 115
+max_text_width 130
 text_buffer_size 5000
 
 lua_load $HOME/.xmonad/confs/conky_grey.lua
@@ -74,27 +70,26 @@ lua_draw_hook_post main
 TEXT
 $nodename - $sysname $kernel on $machine
 ${color lightgrey}Uptime:$color $uptime ${color lightgrey}- Load:$color $loadavg
-${color lightgrey}CPU Usage:${color #5000a0} ${cpu}% ${goto 120}${cpubar 8,250}
-${color black}${cpugraph 8,365 000000 5000a0}
-${color lightgrey}RAM Usage:$color $mem/$memmax - $memperc% ${goto 240}${membar 8,130}
-${color lightgrey}Swap Usage:$color $swap/$swapmax - $swapperc% ${goto 280}${swapbar 8,90}
+${color lightgrey}CPU Usage:${color #5000a0} ${cpu}% ${goto 180}${cpubar 8,390}
+${color black}${cpugraph 16,545 000000 5000a0}
+${color lightgrey}RAM Usage:$color $mem/$memmax - $memperc% ${goto 430}${membar 8,140}
 ${color lightgrey}Processes:$color $processes  ${color grey}Running:$color $running_processes
 ${color lightgrey}File systems:
- / $color${fs_used /}/${fs_size /} ${goto 150}${fs_bar 8,220 /}
- /home $color${fs_used /home}/${fs_size /home} ${goto 170}${fs_bar 8,200 /home}
+ /          ${goto 140}$color${fs_used /}/${fs_size /}                          ${goto 340}${fs_bar 8,230 /}
+ /home      ${goto 140}$color${fs_used /home}/${fs_size /home}                  ${goto 340}${fs_bar 8,230 /home}
+ Common     ${goto 140}$color${fs_used /mnt/Common}/${fs_size /mnt/Common}      ${goto 340}${fs_bar 8,230 /mnt/Common}
 ${color lightgrey}Temperatures:
  CPU:$color ${acpitemp}C${color grey}
-${voffset -80}
-${goto 474}${time %T}
-${voffset -90}
-${goto 600}${color}Name              PID     CPU%   MEM%
-${goto 600}${color #ddaa00} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
-${goto 600}${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
-${goto 600}${color lightgrey} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
-${goto 600}${color}Mem usage
-${goto 600}${color #ddaa00} ${top_mem name 1} ${top_mem pid 1} ${top_mem cpu 1} ${top_mem mem 1}
-${goto 600}${color lightgrey} ${top_mem name 2} ${top_mem pid 2} ${top_mem cpu 2} ${top_mem mem 2}
-${goto 600}${color lightgrey} ${top_mem name 3} ${top_mem pid 3} ${top_mem cpu 3} ${top_mem mem 3}
+${voffset -270}
+${goto 1100}${color}Name              PID     CPU%   MEM%
+${goto 1100}${color #442200} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
+${goto 1100}${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
+${goto 1100}${color lightgrey} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
+${voffset 70}
+${goto 1100}${color}Mem usage
+${goto 1100}${color #442200} ${top_mem name 1} ${top_mem pid 1} ${top_mem cpu 1} ${top_mem mem 1}
+${goto 1100}${color lightgrey} ${top_mem name 2} ${top_mem pid 2} ${top_mem cpu 2} ${top_mem mem 2}
+${goto 1100}${color lightgrey} ${top_mem name 3} ${top_mem pid 3} ${top_mem cpu 3} ${top_mem mem 3}
 ${voffset 20}
 ${color lightgrey}${stippled_hr 1}
-${execi 5 journalctl -n15}
+${execi 5 journalctl -n10}
