more style fixes for conky

--- a/xmonad/confs/betterConkyStatus.conf
+++ b/xmonad/confs/betterConkyStatus.conf
@@ -12,7 +12,7 @@ temperature_unit celsius
 double_buffer yes
 
 gap_x 25
-gap_y 65
+gap_y 0
 #minimum_size 1640
 maximum_width 1640
 own_window yes
@@ -68,6 +68,7 @@ lua_load $HOME/.xmonad/confs/conky_grey.lua
 lua_draw_hook_post main
 
 TEXT
+${voffset 65}
 $nodename - $sysname $kernel on $machine
 ${color lightgrey}Uptime:$color $uptime ${color lightgrey}- Load:$color $loadavg
 ${color lightgrey}CPU Usage:${color #5000a0} ${cpu}% ${goto 180}${cpubar 8,390}
