tinkering with conky

--- a/xmonad/confs/betterConkyStatus.conf
+++ b/xmonad/confs/betterConkyStatus.conf
@@ -61,7 +61,7 @@ no_buffers yes
 # set to yes if you want all text to be in uppercase
 uppercase no
 
-max_text_width 130
+max_text_width 120
 text_buffer_size 5000
 
 lua_load $HOME/.xmonad/confs/conky_grey.lua
@@ -93,4 +93,5 @@ ${goto 1100}${color lightgrey} ${top_mem name 2} ${top_mem pid 2} ${top_mem cpu 
 ${goto 1100}${color lightgrey} ${top_mem name 3} ${top_mem pid 3} ${top_mem cpu 3} ${top_mem mem 3}
 ${voffset 20}
 ${color lightgrey}${stippled_hr 1}
-${execi 5 journalctl -n10}
+${execi 5 journalctl -p 5 --no-pager -n20}
+${voffset 200}
