list open TCP connections in conky

--- a/xmonad/confs/examples/conkyStats.conf
+++ b/xmonad/confs/examples/conkyStats.conf
@@ -81,6 +81,10 @@ ${color lightgrey}File systems:
  Common     ${goto 140}$color${fs_used /mnt/Common}/${fs_size /mnt/Common}      ${goto 340}${fs_bar 8,230 /mnt/Common}
 ${color lightgrey}Temperatures:
  CPU:$color ${acpitemp}C${color grey}
+${color Tan2}ESTABLISHED Connections${color DarkSlateGray}
+${offset 10}${color lightgrey}Inbound: ${color white}${tcp_portmon 1 32767 count}    ${color lightgrey}Outbound: ${color white}${tcp_portmon 32768 61000 count}${color lightgrey}Total: ${color white}${tcp_portmon 1 65535 count}
+${color slate grey}Process
+${font Ubuntu Mono:size=8}${texeci 30   netstat -anp | grep 'ESTABLISHED' | awk '{ split($7,a,"/"); print a[2] }' | sort -u | awk '{print;} END {print "\n\n\n\n\n\n\n\n\n\n"}' | head -n 10}
 ${voffset -270}
 ${goto 1100}${color}Name              PID     CPU%   MEM%
 ${goto 1100}${color #442200} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
