--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,5 +33,4 @@ bind C-c run "tmux show-buffer | xsel -i -b"
 ##Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
 bind C-v run "tmux set-buffer -- \"$(xsel -o -b)\"; tmux paste-buffer"
 
-#source-file ~/config/repos/solarized/tmux/tmuxcolors-dark.conf
-source-file ~/config/tmuxln
+source-file ~/.tmuxln.conf
