--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,11 +18,12 @@ set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 
-#switch panels
-bind k selectp -U # switch to panel Up
-bind j selectp -D # switch to panel Down
-bind h selectp -L # switch to panel Left
-bind l selectp -R # switch to panel Right
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
