--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,10 @@ set -g mouse-utf8 off
 set -g escape-time 0
 set -g repeat-time 0
 
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+
 #urxvt tab like window switching (-n: no prior escape seq)
 bind -n S-down new-window
 bind -n S-left prev
