--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "emacs.d/vendor/evil-lispy"]
 	path = emacs.d/vendor/evil-lispy
 	url = https://github.com/bcarrell/evil-lispy
+[submodule "emacs.d/snippets/yasnippet-snippets"]
+	path = emacs.d/snippets/yasnippet-snippets
+	url = https://github.com/AndreaCrotti/yasnippet-snippets
+[submodule "emacs.d/snippets/yasmate"]
+	path = emacs.d/snippets/yasmate
+	url = https://github.com/capitaomorte/yasmate
