--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,6 @@
 # vi: syntax=tmux
 set-option -g destroy-unattached off
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-set -g mouse-utf8 off
 set -g escape-time 0
 set -g repeat-time 0
 
@@ -14,10 +13,14 @@ bind -n S-down new-window
 bind -n S-left prev
 bind -n S-right next
 
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+# same but alt+hjkl
+bind -n M-j new-window
+bind -n M-h prev
+bind -n M-l next
+bind -n M-k kill-window
+
+set -g mouse-utf8 off
+set -g mouse on
 
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
