--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,7 @@ bind -n M-k kill-window
 
 set -g mouse-utf8 off
 set -g mouse on
+bind -n WheelUpPane copy-mode
 
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
