--- a/.gitmodules
+++ b/.gitmodules
@@ -1,26 +1,26 @@
 [submodule "prezto"]
 	path = prezto
 	url = https://github.com/scoiatael/prezto
-[submodule "emacs.d/themes/emacs-color-theme-solarized"]
-	path = emacs.d/themes/emacs-color-theme-solarized
+[submodule "emacs/themes/emacs-color-theme-solarized"]
+	path = emacs/themes/emacs-color-theme-solarized
 	url = https://github.com/sellout/emacs-color-theme-solarized
-[submodule "emacs.d/vendor/evil-rebellion"]
-	path = emacs.d/vendor/evil-rebellion
+[submodule "emacs/vendor/evil-rebellion"]
+	path = emacs/vendor/evil-rebellion
 	url = https://github.com/tarleb/evil-rebellion
-[submodule "emacs.d/vendor/evil-lispy"]
-	path = emacs.d/vendor/evil-lispy
+[submodule "emacs/vendor/evil-lispy"]
+	path = emacs/vendor/evil-lispy
 	url = https://github.com/bcarrell/evil-lispy
-[submodule "emacs.d/snippets/yasnippet-snippets"]
-	path = emacs.d/snippets/yasnippet-snippets
+[submodule "emacs/snippets/yasnippet-snippets"]
+	path = emacs/snippets/yasnippet-snippets
 	url = https://github.com/AndreaCrotti/yasnippet-snippets
-[submodule "emacs.d/snippets/yasmate"]
-	path = emacs.d/snippets/yasmate
+[submodule "emacs/snippets/yasmate"]
+	path = emacs/snippets/yasmate
 	url = https://github.com/capitaomorte/yasmate
 [submodule "spacemacs"]
 	path = spacemacs
 	url = https://github.com/syl20bnr/spacemacs
-[submodule "emacs.d/spacemacs.d"]
-	path = emacs.d/spacemacs.d
+[submodule "emacs/spacemacs.d"]
+	path = emacs/spacemacs.d
 	url = https://github.com/syl20bnr/spacemacs
 [submodule "haskell/structured-haskell-mode"]
 	path = haskell/structured-haskell-mode
