--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,4 +40,7 @@ bind C-c run "tmux show-buffer | xsel -i -b"
 ##Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
 bind C-v run "tmux set-buffer -- \"$(xsel -o -b)\"; tmux paste-buffer"
 
+# increase history
+set-option -g history-limit 5000
+
 source-file ~/.tmuxln.conf
