--- a/ssh/config
+++ b/ssh/config
@@ -25,6 +25,10 @@ Host ci
   User lczaplinski
   Hostname ssh.ci.nowthis.network
 
+Host infra
+  User lczaplinski
+  Hostname ssh.infra.nowthis.network
+
 Host thebeast
   User lczaplinski
   Hostname 206.252.196.69
@@ -34,3 +38,9 @@ Host aruba
   User L
   Hostname 85.255.8.174
   IdentityFile ~/.ssh/aruba_rsa
+
+Host jumpbox
+  User lczaplinski
+  IdentityFile ~/.ssh/aruba_rsa
+  Hostname jumpbox.eternal.p5.tiktalik.io
+  Port 22172
