--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -134,3 +134,4 @@
 # Uncomment the following option to get rid of the copyright notice
 
 #no-greeting
+keyserver hkps://hkps.pool.sks-keyservers.net
