--- a/fish/.gitignore
+++ b/fish/.gitignore
@@ -5,5 +5,6 @@ functions/*
 !functions/fish_prompt.fish
 !functions/fish_right_prompt.fish
 !functions/c.fish
+!functions/fish_user_key_bindings.fish
 conf.d/*
 completions/*
