--- a/ssh/config
+++ b/ssh/config
@@ -56,7 +56,7 @@ Host insights-testing
 
 Host thebeast
   User lczaplinski
-  Hostname 206.252.196.69
+  Hostname ssh.thebeast.nowthis.network
 
 Host aruba
   User L
